update website page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -61,21 +61,49 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to Our Website</h1>
-        <p>This is a simple welcome page.</p>
-        <p>Feel free to explore our website.</p>
+        <h1>Welcome to Yuanchao AWS Hands-on project </h1>
+        <p>The project's learning path sorted by incresed complexity and amount of used resources: 1->2->3->6->4->5->8->7->9<p>
+        <p>The goal of this project aims to:
+            1.lean all most commonly used AWS resources
+            2.use these AWS resoucres the same way taht they are implemented in industry's real production/work environment 
+            3.have an automated process that can reprodure each project just by almost one click.</p>
+        <p>As they are involved in almost every project, AWS IAM and AWS Cloudwatch are not mentioned in this intruduction page.</p>
         <ul>
             <li>
                 <a href="topic1/index.html">Topic 1</a>
-                <span class="topic-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                <span class="topic-description">Simple Http Static Website(S3).</span>
             </li>
             <li>
                 <a href="topic2/index.html">Topic 2</a>
-                <span class="topic-description">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+                <span class="topic-description">Https Static Website with a public DNS domain with(S3+Route 53+Certificate Manager+CloudFront).</span>
             </li>
             <li>
                 <a href="topic3/index.html">Topic 3</a>
-                <span class="topic-description">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</span>
+                <span class="topic-description">Shared FS between 2 servers(EC2+EFS).</span>
+            </li>
+            <li>
+                <a href="topic4/index.html">Topic 4</a>
+                <span class="topic-description">Docker image build's CI/CD, push to private DTR(Codebuild+ECR).</span>
+            </li>
+            <li>
+                <a href="topic5/index.html">Topic 5</a>
+                <span class="topic-description">Docker container website(service) using Database(ECS+FARGATE+RDS).</span>
+            </li>
+            <li>
+                <a href="topic6/index.html">Topic 6</a>
+                <span class="topic-description">Simple http website hosted on loadbalancing & autoscaling private backend(ELB+EC2+VPC+Auto-scaling).</span>
+            </li>
+            <li>
+                <a href="topic7/index.html">Topic 7</a>
+                <span class="topic-description">RESTful application(API) using Database(DynamoDB+SES+ApiGateway+StepFunctions+Eventbridge+Lambda).</span>
+            </li>
+            <li>
+                <a href="topic8/index.html">Topic 9</a>
+                <span class="topic-description">to define.</span>
+            </li>
+            <li>
+                <a href="topic9/index.html">Topic 10</a>
+                <span class="topic-description">incoming</span>
             </li>
             <!-- Add more topics as needed -->
         </ul>
