--- a/frontend/index.html
+++ b/frontend/index.html
@@ -98,11 +98,15 @@
                 <span class="topic-description">RESTful application(API) using Database(DynamoDB+SES+ApiGateway+StepFunctions+Eventbridge+Lambda).</span>
             </li>
             <li>
-                <a href="topic8/index.html">Topic 9</a>
-                <span class="topic-description">to define.</span>
+                <a href="topic8/index.html">Topic 8</a>
+                <span class="topic-description">Scheduler batch job application(Batch).</span>
             </li>
             <li>
-                <a href="topic9/index.html">Topic 10</a>
+                <a href="topic9/index.html">Topic 9</a>
+                <span class="topic-description">in progress.</span>
+            </li>
+            <li>
+                <a href="topic10/index.html">Topic 10</a>
                 <span class="topic-description">incoming</span>
             </li>
             <!-- Add more topics as needed -->
