--- a/frontend/index.html
+++ b/frontend/index.html
@@ -80,7 +80,13 @@
                 <div class="card">
                     <a href="topic10/index.html">
                         <h3>Topic 10</h3>
-                        <p>ArgoCD+Crossplane+Pulumi coming soon.</p>
+                        <p>AWS + Go Operator + FluxCD + Crossplane + ArgoCD</p>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="topic11/index.html">
+                        <h3>Topic 11</h3>
+                        <p>coming soon.</p>
                     </a>
                 </div>
             </div>
