--- a/frontend/topic10/live.html
+++ b/frontend/topic10/live.html
@@ -47,7 +47,7 @@
         <br>
         you can find the access id and access key inside this page😮<br>
         <br>
-        dont worry this access has only very limited read permission😉<br>
+        dont worry this access has only very limited read permission😉, i'm working on another solution to not put AWS acess keys inside the static page<br>
     </div>
   </div>
 
@@ -60,7 +60,7 @@
     <div class="message-box" id="messageProduct2">
       Go to product1's S3 Website😎<br>
       <br>
-      http://service2-topic10-xr-mmrzg-4tcz6.s3-website.eu-west-3.amazonaws.com🥳</div>
+      http://service2-topic10-xr-pnmg7-pmdwg.s3-website.eu-west-3.amazonaws.com 🥳</div>
   </div>
 </div>
 
